--- a/src/styles/global/fuentes.css
+++ b/src/styles/global/fuentes.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Futura-Medium';
-    src: url('/fonts/Futura.woff') format('woff'), url('/fonts/Futura.ttf') format('ttf');
+    src: url('/fonts/Futura.woff2') format('woff'), url('/fonts/Futura.woff') format('woff');
     font-weight: 400;
     font-weight: normal;
     font-display: swap;
@@ -14,12 +14,29 @@
     font-display: swap;
 }
 
-.light-text {
+@font-face {
+    font-family: 'Abigral';
+    src: url('/fonts/Abigral.woff2') format('woff2'), url('/fonts/Abigral.woff') format('woff');
+    font-style: normal;
+    font-display: swap;
+}
+
+.futura-light {
     font-family: 'Futura-Medium', sans-serif;
     font-weight: 400;
 }
 
-.bold-text {
+.futura-bold {
     font-family: 'Futura', sans-serif;
+    font-weight: 700;
+}
+
+.abigral-light {
+    font-family: 'Abigral', sans-serif;
+    font-weight: 100;
+}
+
+.abigral-bold {
+    font-family: 'Abigral', sans-serif;
     font-weight: 700;
 }
