--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@
 @import url('../src/styles/global/variables.css');
 @import url('../src/styles/global/navbar.css');
 @import url('../src/styles/global/cargando.css');
+@import url('../src/styles/global/footer.css');
+
 * {
     margin: 0;
     padding: 0;
@@ -11,4 +13,8 @@
 body {
     overflow-x: hidden;
     background-color: var(--white-color);
+}
+
+html {
+    scrollbar-gutter: stable;
 }
