--- a/src/styles/global/navbar.css
+++ b/src/styles/global/navbar.css
@@ -64,7 +64,7 @@
     transform: translateX(100%);
     transition: transform 0.3s ease;
     gap: 40px;
-    padding-bottom: 20px;
+    padding-bottom: 40px;
     padding-top: 100px;
     width: 235px;
 }
@@ -88,9 +88,29 @@
     padding-right: 24px;
 }
 
-.mobile-nav-menu img {
-    width: 100px;
+.burger-redes-container {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: end;
+    justify-content: center;
+    gap: 20px;
     margin-right: 24px;
+}
+
+.redes-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+
+.redes-container img {
+    width: 40px;
+}
+
+.logo-burger {
+    width: 100px;
 }
 
 /* --------- ESTILOS PARA LINKS*/
@@ -107,13 +127,13 @@
     }
 }
 
-@media (min-width: 992px) {
+@media (min-width: 1200px) {
     .navbar {
         justify-content: center;
         transition: height 0.5s ease, border-radius 0.4s ease, box-shadow 0.3s ease;
         border-bottom-left-radius: 0;
         border-bottom-right-radius: 0;
-        gap: 20px;
+        gap: 30px;
     }
 
     .logo-navbar {
@@ -129,8 +149,8 @@
         user-select: none;
         transition: margin 0.5s ease;
         font-size: 16px;
-        gap: 20px;
-        margin-bottom: 40px;
+        gap: 30px;
+        margin-bottom: 30px;
     }
 
     .menu-nav li {
@@ -170,6 +190,21 @@
         transform: scaleX(1);
     }
 
+    .navbar-redes-container {
+        position: absolute;
+        right: 30px;
+        top: 10px;
+    }
+
+    .redes-container {
+        margin-right: 0px;
+    }
+
+    .redes-container img {
+        transition: width 0.5s ease, scale 0.5s ease;
+        width: 40px;
+    }
+
     .navbar.navbar--shrink {
         border-bottom-right-radius: 50px;
         border-bottom-left-radius: 50px;
@@ -182,14 +217,15 @@
     }
 
     .navbar.navbar--shrink .menu-nav {
-        margin-bottom: 20px;
+        margin-bottom: 15px;
     }
-}
 
-@media (min-width: 1200px) {
-    .menu-nav,
-    .navbar {
-        gap: 30px;
+    .navbar.navbar--shrink .redes-container img {
+        width: 30px;
+    }
+
+    .redes-container img:hover {
+        scale: 0.9;
     }
 }
 
