--- a/src/styles/global/footer.css
+++ b/src/styles/global/footer.css
@@ -11,11 +11,19 @@
 .contenido-footer {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: start;
     justify-content: space-between;
 }
 
-.contenido-footer img {
+.footer-redes-container {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+    gap: 20px;
+}
+
+.logo-footer {
     height: 110px;
 }
 
@@ -25,7 +33,7 @@
     align-items: center;
     justify-content: end;
     list-style: none;
-    gap: 10px 0px;
+    gap: 20px 0px;
     width: 96px;
 }
 
@@ -65,7 +73,16 @@
         padding: 28px 30px;
     }
 
-    .contenido-footer img {
+    .contenido-footer {
+        align-items: center;
+    }
+
+    .footer-redes-container {
+        flex-direction: row;
+        align-items: end;
+    }
+
+    .logo-footer {
         height: 62px;
     }
 
@@ -94,7 +111,11 @@
         padding: 20px 100px;
     }
 
-    .contenido-footer img {
+    .footer-redes-container {
+        gap: 50px;
+    }
+
+    .logo-footer {
         height: 100px;
     }
 
