5 commit - kike-dentista-1-1.0 - primera maqueta full 1.0

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@
 @import url('../src/styles/global/variables.css');
 @import url('../src/styles/global/navbar.css');
 @import url('../src/styles/global/cargando.css');
+@import url('../src/styles/global/botones.css');
+@import url('../src/styles/global/inputTel.css');
 @import url('../src/styles/global/footer.css');
 
 * {
@@ -17,4 +19,19 @@ body {
 
 html {
     scrollbar-gutter: stable;
+}
+
+/* Hace que Chrome/Edge NO apliquen el fondo amarillo/blanco del autofill */
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+    -webkit-box-shadow: 0 0 0px 1000px var(--white-color) inset !important;
+    /* color del background en el input */
+    box-shadow: 0 0 0px 1000px var(--white-color) inset !important;
+    /* color del texto en el input */
+    -webkit-text-fill-color: var(--dark-color) !important;
+    /* color del | en el input */
+    caret-color: var(--dark-color) !important;
+    transition: background-color 9999s ease-in-out 0s !important;
 }
