--- a/src/styles/global/footer.css
+++ b/src/styles/global/footer.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: var(--shadow-color);
+    background-color: var(--white-color);
     width: 100%;
     padding: 20px 25px;
     gap: 20px;
