--- a/src/styles/global/navbar.css
+++ b/src/styles/global/navbar.css
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: start;
-    background-color: var(--shadow-color);
+    background-color: var(--white-color);
     height: 80px;
     width: 100%;
 }
