--- a/src/styles/modules/sectionLp2.module.css
+++ b/src/styles/modules/sectionLp2.module.css
@@ -3,13 +3,14 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-color: var(--dark-color);
     padding-top: 40px;
     padding-bottom: 60px;
     gap: 40px;
 }
 
 .sectionContainer header h2 {
-    color: var(--dark-color);
+    color: var(--white-color);
     font-size: 32px;
 }
 
@@ -29,6 +30,8 @@
     justify-content: start;
     text-align: center;
     border: solid var(--dark-color);
+    background-color: var(--white-color);
+    filter: drop-shadow(0px 0px 100px var(--white-color-2));
     border-radius: 5px;
     gap: 10px;
     padding: 10px;
@@ -37,7 +40,7 @@
 }
 
 .servicio img {
-    width: 100px;
+    height: 100px;
 }
 
 .servicio h3 {
@@ -49,6 +52,10 @@
     color: var(--dark-color);
     font-size: 16px;
 }
+
+/* .servicio6 {
+    justify-content: center;
+} */
 
 @media (min-width: 768px) {
     .serviciosContainer {
@@ -69,6 +76,7 @@
 
     .serviciosContainer {
         width: 1220px;
+        gap: 20px;
     }
 
     .servicio {
@@ -78,5 +86,11 @@
 
     .servicio p {
         font-size: 18px;
+    }
+}
+
+@media (min-width: 1400px) {
+    .serviciosContainer {
+        gap: 40px;
     }
 }
