--- a/src/styles/modules/sectionLp3.module.css
+++ b/src/styles/modules/sectionLp3.module.css
@@ -22,6 +22,7 @@
 }
 
 .sectionContenido img {
+    filter: drop-shadow(0px 0px 100px var(--dark-color-2));
     width: 360px;
 }
 
@@ -59,7 +60,7 @@
 
     .sectionContenido {
         align-items: center;
-        gap: 100px;
+        gap: 60px;
     }
 
     .sectionContenido img {
@@ -72,5 +73,11 @@
 
     .textosContainer p {
         font-size: 18px;
+    }
+}
+
+@media (min-width: 1400px) {
+    .sectionContenido {
+        gap: 100px;
     }
 }
