--- a/src/styles/modules/sectionLp4.module.css
+++ b/src/styles/modules/sectionLp4.module.css
@@ -3,7 +3,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding-top: 40px;
+    background-color: var(--dark-color);
+    padding-top: 60px;
     padding-bottom: 60px;
     gap: 20px;
 }
@@ -22,7 +23,7 @@
     flex-direction: column;
     align-items: start;
     justify-content: center;
-    color: var(--dark-color);
+    color: var(--white-color);
     gap: 10px;
 }
 
@@ -37,6 +38,12 @@
 .mapContainer {
     width: 325px;
     height: auto;
+    filter: drop-shadow(0px 0px 100px var(--white-color-2));
+}
+
+.mapContainer a {
+    color: var(--white-color);
+    font-size: 16px;
 }
 
 @media (min-width: 768px) {
@@ -52,9 +59,9 @@
 
 @media (min-width: 1200px) {
     .sectionContainer {
-        padding-top: 60px;
-        padding-bottom: 80px;
-        gap: 90px;
+        padding-top: 100px;
+        padding-bottom: 100px;
+        gap: 50px;
     }
 
     .textosContainer {
@@ -72,5 +79,11 @@
     .mapContainer {
         width: 800px;
         height: 350px;
+    }
+}
+
+@media (min-width: 1400px) {
+    .sectionContainer {
+        gap: 100px;
     }
 }
